[package]
name = "rust-lioness"
version = "0.1.3"
authors = ["Jeffrey Burdges <burdges@gnunet.org>", "David Stainton <dstainton415@gmail.com>"]
description = "Lioness wide block cipher"
homepage = "https://github.com/david415/rust-lioness"
repository = "https://github.com/david415/rust-lioness.git"
documentation = "https://docs.rs/rust-lioness/"
readme = "README.rst"
keywords = ["cryptography","cipher","lioness", "sphinx", "mixnet"]
license = "MIT/Apache-2.0"

[dependencies]
rustc-serialize = "0.3.24"
rust-crypto = "^0.2"
arrayref = "^0.3.4"

[dev-dependencies]
rand = "^0.3"
rustc-serialize = "0.3"
